- Added recipes to produce white, black, and orange sand

-= Changes =-
- Changed the menu panorama
- Updated in game Guidebook
- Changed the anvil to be made from 7 cast iron ingots in an I pattern
- Changed the recipes for little logistics vehicles to use brass instead of bronze to make it a little easier to make
- Changed phantoms to spawn in the end, and disabled insomnia, preventing phantoms from spawning fron not sleeping
- Changed the recipe of several food items: mushroom stew, beetroot soup, fruit salad
- Changed honey bread and honey glazed porkchop to use spout filling instead of crafting to match the honeyed apple
- Changed mushroom stew and beetroot soup to count as meals, and thus their food value has been increased.
- Significantly reduced the cooldown on milking cows (from 20 minutes down to 1 minute) as I misunderstood to units of the config file

-= Removals =-
- Removed the Honeyed Apple from Buzzier Bees as it overlapped with the one from Create
- Removed the penalties on breeding cooldown and growth time for babies
- Zombies will no longer spawn reinforcements when attacked
- Baby zombies will no longer spawn at all
- Removed the ability for phantoms to spawn from insomnia

-= Bugfixes =-
- Fixed an issue where JourneyMap Integrations was trying to integrate with FTBChunks when FTBChunks is not present
- Fixed an issue where grilled corn, boiled corn, and cornbread dressing were note craftable

---=== Version 0.2.0 ===---
IMPORTANT: Please remove any items you had in backpacks BEFORE updating as the previous backpack mod has been removed! There is a different solution for backpacks in this version.

-= Modlist Changes =-
- Added Quark Oddities. All features currently disabled except for the Backpack
- Added Curious Quark Oddities backpack
- Added Polymorph to fix problems with recipe overlap
- Added Controlling to be able to search keybinds
- Added Eclectic Trove for more variety with tooltips