@@ -23,6 +23,7 @@
 - Updated in game Guidebook
 - Changed the anvil to be made from 7 cast iron ingots in an I pattern
 - Changed the recipes for little logistics vehicles to use brass instead of bronze to make it a little easier to make
+- Changed metal doors and trapdoors to use sheets instead of ingots
 - Changed phantoms to spawn in the end, and disabled insomnia, preventing phantoms from spawning fron not sleeping
 - Changed the recipe of several food items: mushroom stew, beetroot soup, fruit salad
 - Changed honey bread and honey glazed porkchop to use spout filling instead of crafting to match the honeyed apple
